<resources>
    <string name="app_name">LoginDesign</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="enter_name">enter Name</string>
    <string name="enter_email">enter Email</string>
    <string name="enter_password">enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
</resources>