<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/backgrounbike"
    android:gravity="center"
    tools:context=".ui.login.LoginActivity"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        android:background="@drawable/modifiedtextview">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="40dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="34sp"
                android:padding="10dp"
                android:text="@string/login">

            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/useName"
                android:padding="3dp"
                android:hint="@string/enter_name"
                android:background="@drawable/modifiedtextview"
                android:gravity="center"
                android:fontFamily="casual"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:paddingTop="5dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints="">

            </EditText>

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:autofillHints="Ronald"
                android:background="@drawable/modifiedtextview"
                android:fontFamily="casual"
                android:gravity="center"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="3dp"
                android:paddingTop="5dp"
                android:textSize="20sp">

            </EditText>
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/userPassword"
                android:padding="3dp"
                android:hint="@string/enter_password"
                android:background="@drawable/modifiedtextview"
                android:gravity="center"
                android:fontFamily="casual"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:paddingTop="5dp"
                android:layout_height="wrap_content"
                android:autofillHints="">

            </EditText>
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/confirmPassword"
                android:padding="3dp"
                android:hint="@string/confirm_password"
                android:background="@drawable/modifiedtextview"
                android:gravity="center"
                android:fontFamily="casual"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:paddingTop="5dp"
                android:layout_height="wrap_content"
                android:autofillHints="">

            </EditText>
            <Button
                android:layout_width="match_parent"
                android:layout_marginTop="50sp"
                android:background="@drawable/modifiedtextview"
                android:text="@string/register"
                android:backgroundTint="@color/purple_200"
                android:onClick="RegisterUser"
                android:layout_height="wrap_content">

            </Button>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>